--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-intl": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-loading-indicators": "^1.0.1",
     "swr": "^2.3.3"
   },
   "devDependencies": {
