--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-loading-indicators": "^1.0.1",
-    "swr": "^2.3.3"
+    "swr": "^2.3.3",
+    "@pandacss/dev": "^0.53.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@pandacss/dev": "^0.53.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
